# fasty-blog-py

./: .dockerignore  .gitignore  Dockerfile  README.md  auth.py  blog.db  check_s3.py  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  populate_db.py  pyproject.toml  requirements.txt  schemas.py  tailwind.config.js
alembic/: env.py
alembic/versions/: 1a3083f97e95_add_likes_to_posts.py  b671dbabc099_initial_schema.py
routers/: posts.py  users.py
static/css/: input.css
static/js/: utils.js
tailwindcss/: input.css  package-lock.json  package.json
templates/: account.html  error.html  forgot_password.html  home.html  layout.html  login.html  post.html  register.html  reset_password.html  user_posts.html
templates/email/: reset-password.html
tests/: test_posts.py  test_users.py
